# axum-sqlx-ddd-template

./: .gitignore  Cargo.toml  DOCUMENT.md  README.md  create-skelton.sh  migration.postgres.sql  migration.sql  web-api.config.yaml
application/: Cargo.toml
application/src/: lib.rs  module.rs
application/src/errors/: error.rs  mod.rs
application/src/model/: auth.rs  todo.rs
application/src/usecase/: auth.rs  todo.rs
common/: Cargo.toml
common/postgres/: Cargo.toml
common/postgres/src/: lib.rs  setup.rs  types.rs
common/sqlite/: Cargo.toml
common/sqlite/src/: setup.rs
common/src/: config.rs  setup.rs  types.rs
config/: Cargo.toml
config/src/: config.rs
domain/: Cargo.toml
domain/src/: lib.rs  uow.rs
domain/src/interface/: member.rs  todo.rs  user.rs
domain/src/model/: member.rs  todo.rs  user.rs
html/: index.html
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs  uow.rs
infrastructure/src/repository/: member.rs  todo.rs  user.rs
libs/simple-jwt/src/: lib.rs
presentation/: Cargo.toml
presentation/src/: lib.rs  router.rs
presentation/src/errors/: error.rs  mod.rs
presentation/src/handler/: auth.rs  todo.rs
presentation/src/middleware/: auth.rs
web-api/: Cargo.toml
web-api/src/: main.rs
