[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [ "application", "common", "domain", "infrastructure","libs/async-argon2", "libs/simple-jwt", "presentation", "web-api"]

[workspace.dependencies]
argon2 = { version = "0.5.3", default-features = false, features = ["alloc", "password-hash", "std"] }
async-trait = { version = "0.1.89", default-features = false }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", default-features = false, features = ["typed-header"] }
chrono = { version = "0.4.41", default-features = false, features = ["serde", "now"] }
clap = { version = "4.5.45", features = ["derive"] }
derive-new = { version = "0.7.0", default-features = false }
jsonwebtoken = { version = "9.3.1", default-features = false }
once_cell = { version = "1.21.3", default-features = false, features = ["std"] }
password-hash = { version = "0.5.0", default-features = false, features = ["getrandom"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.143", default-features = false, features = ["std"] }
serde_yaml = { version = "0.9.34", default-features = false }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "chrono", "derive", "sqlite"] }
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5.2", default-features = false, features = ["timeout"] }
tower-http = { version = "0.6.6", default-features = false, features = ["fs", "cors"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt", "env-filter"] }
uuid = { version = "1.18.0", default-features = false, features = ["v4", "serde"] }

async-argon2 = { path = "libs/async-argon2" }
simple-jwt = { path = "libs/simple-jwt" }
common = { path = "common" }
domain = { path = "domain" }
infrastructure = { path = "infrastructure" }
application = { path = "application" }
presentation = { path = "presentation" }
# simple-cms = { path = "simple-cms" }

[profile.release]
opt-level = "z"
debug = false
lto = true
strip = true
codegen-units = 1
panic = "abort"
