[package]
name = "web-api"
version.workspace = true
edition.workspace = true

[dependencies]
common.workspace = true
presentation.workspace = true
application.workspace = true
infrastructure.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
libsqlite3-sys = { version = "^0.30.1", default-features = false, optional = true }

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite", "libsqlite3-sys"]
postgres = ["sqlx/postgres"]
