[package]
name = "web-api"
version.workspace = true
edition.workspace = true

[dependencies]
config.workspace = true
common.workspace = true
presentation.workspace = true
application.workspace = true
infrastructure.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum.workspace = true
tokio.workspace = true
