[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
sqlx = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true, features = ["fs"], default-features = false }

config.workspace = true
libsqlite3-sys = { version = "^0.30.1", default-features = false, optional = true }

[features]
libsqlite3-sys = ["dep:libsqlite3-sys"]

